--- a/speed-and-distance.Rmd
+++ b/speed-and-distance.Rmd
@@ -2,7 +2,11 @@
 title: "speed-and-distance"
 author: "Hang"
 date: "8 May 2019"
-output: html_document
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 ```{r setup, include=FALSE}
